--- a/search/index.html
+++ b/search/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://harish3110.github.io/through-tinted-lenses/search/" />
 <meta property="og:site_name" content="Through Tinted Lenses" />
 <script type="application/ld+json">
-{"description":"Immerse into the lesser known.","@type":"WebPage","url":"https://harish3110.github.io/through-tinted-lenses/search/","headline":"Search","@context":"https://schema.org"}</script>
+{"description":"Immerse into the lesser known.","@type":"WebPage","headline":"Search","url":"https://harish3110.github.io/through-tinted-lenses/search/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/through-tinted-lenses/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://harish3110.github.io/through-tinted-lenses/feed.xml" title="Through Tinted Lenses" /><link rel="shortcut icon" type="image/x-icon" href="/through-tinted-lenses/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>Search | Through Tinted Lenses</title>
@@ -26,7 +26,7 @@
 <meta property="og:url" content="https://harish3110.github.io/through-tinted-lenses/search/" />
 <meta property="og:site_name" content="Through Tinted Lenses" />
 <script type="application/ld+json">
-{"description":"Immerse into the lesser known.","@type":"WebPage","url":"https://harish3110.github.io/through-tinted-lenses/search/","headline":"Search","@context":"https://schema.org"}</script>
+{"description":"Immerse into the lesser known.","@type":"WebPage","headline":"Search","url":"https://harish3110.github.io/through-tinted-lenses/search/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
