--- a/about/index.html
+++ b/about/index.html
@@ -91,7 +91,7 @@ window.onload = wrap_img;
 
 <p>I am a data science and ML enthusiast trying to do my bit in the field, a technology evangelist, a bibliophile, and a deranged Liverpool fan! :)</p>
 
-<p>If you would like to provide some feedbac/suggestions on the content I post you can reach me out on my <a href="www.twitter.com/harish3110">twitter</a> handle.</p>
+<p>If you would like to provide some feedbac/suggestions on the content I post you can reach me out on my <a href="https://twitter.com/harish3110">twitter</a> handle.</p>
 
 
   </div>
