deploy: 91f05f6d47d92125c65a2da8c4013cc36acc2835

--- a/about/index.html
+++ b/about/index.html
@@ -96,7 +96,7 @@ window.onload = wrap_img;
 <hr />
 <p>Love my work and think we could collaborate on something together? Feel free to drop me an email at harish3110@gmail.com or reach out to me on <a href="https://twitter.com/harish3110">Twitter</a>.</p>
 
-<p>You can also check out my Resume <a href="https://drive.google.com/file/d/1p3An689RdQWi4nSwicn-7rO4LOH8G9Av/view?usp=sharing">here</a></p>
+<p>You can also check out my professional resume <a href="https://drive.google.com/file/d/1p3An689RdQWi4nSwicn-7rO4LOH8G9Av/view?usp=sharing">here</a>.</p>
 
 <p><img src="/through-tinted-lenses/images/profile_pic.jpg" alt="" /></p>
 
