deploy: 26d477715628dbf8c8096e7f2780d8c3ede2ac71

--- a/about/index.html
+++ b/about/index.html
@@ -94,7 +94,7 @@ window.onload = wrap_img;
 <p>I love discussing all things ML, productivity hacks, football or advancement in technology in general, so give me a shout on <a href="https://twitter.com/harish3110">@harish3110</a> on Twitter. You can also check out the rest of my work tinkering on ML topics on my <a href="https://github.com/harish3110">Github</a>.</p>
 
 <hr />
-<p>Love my work and think we could collaborate on something together? Feel free to drop me an email at harish3110@gmail.com or reach out to me on <a href="https://twitter.com/harish3110">Twitter</a>.</p>
+<p>Love my work and think we could collaborate on something together? Feel free to drop me an email at <a href="mailto:harish3110@gmail.com">harish3110@gmail.com</a> or reach out to me on <a href="https://twitter.com/harish3110">Twitter</a>.</p>
 
 <p>You can also check out my professional resume <a href="https://drive.google.com/file/d/1p3An689RdQWi4nSwicn-7rO4LOH8G9Av/view?usp=sharing">here</a>.</p>
 
