--- a/about/index.html
+++ b/about/index.html
@@ -91,7 +91,7 @@ window.onload = wrap_img;
 
 <p>Follow along through my machine learning journey as I try to unveil the science behind developing cognition in machines through tinted lenses! :)</p>
 
-<p>I love discussing all things ML, productivity hacks, football, or advancement in technology in general, so give me a shout on @<a href="https://twitter.com/harish3110">@harish3110</a> on Twitter. You can also check out the rest of my work tinkering on ML topics on my <a href="https://github.com/harish3110">Github</a>.</p>
+<p>I love discussing all things ML, productivity hacks, football, or advancement in technology in general, so give me a shout on <a href="https://twitter.com/harish3110">@harish3110</a> on Twitter. You can also check out the rest of my work tinkering on ML topics on my <a href="https://github.com/harish3110">Github</a>.</p>
 
 <hr />
 <p>Love my work and think we could collaborate on something together? Feel free to drop me an email at <a href="mailto:harish3110@gmail.com">harish3110@gmail.com</a> or reach out to me on <a href="https://twitter.com/harish3110">Twitter</a>.</p>
