--- a/about/index.html
+++ b/about/index.html
@@ -91,19 +91,20 @@ window.onload = wrap_img;
 
 <p>Follow along through my machine learning journey as I try to unveil the science behind developing cognition in machines through tinted lenses! :)</p>
 
-<p>I love discussing all things ML, productivity hacks, football, or advancement in technology in general, so give me a shout on <a href="https://twitter.com/harish3110">@harish3110</a> on Twitter. You can also check out the rest of my work tinkering on ML topics on my <a href="https://github.com/harish3110">Github</a>.</p>
+<p>I love discussing all things ML, productivity hacks, football, or advancement in technology in general, so give me a shout on <a href="https://twitter.com/harish3110">@harish3110</a> on Twitter or connect with me on <a href="https://www.linkedin.com/in/harish3110/">Linkedin</a>. You can also check out the rest of my work tinkering on ML topics on my <a href="https://github.com/harish3110">Github</a>.</p>
+
+<hr />
+
+<p><img src="/through-tinted-lenses/images/profile_pic.jpg" alt="" /></p>
 
 <hr />
 <p>Love my work and think we could collaborate on something together? Feel free to drop me an email at <a href="mailto:harish3110@gmail.com">harish3110@gmail.com</a> or reach out to me on <a href="https://twitter.com/harish3110">Twitter</a>.</p>
 
 <p>You can also check out my professional resume <a href="https://drive.google.com/file/d/1p3An689RdQWi4nSwicn-7rO4LOH8G9Av/view?usp=sharing">here</a>.</p>
 
-<hr />
-
-<p><img src="/through-tinted-lenses/images/profile_pic.jpg" alt="" /></p>
-
 <p>FYI: Unfortunately, I haven’t passed the Turing test yet! ;)</p>
 
+<hr />
 
   </div>
 
