--- a/index.html
+++ b/index.html
@@ -3,4 +3,8 @@ layout: home
 search_exclude: true
 ---
 
-# Posts
+![]({{site.baseurl}}/images/ttl_small.png "Through Tinted Lenses")
+
+**Welcome! My latest articles are below, if you'd like to get in touch, find me at [@harish3110](www.twitter.com/harish3110) on Twitter**
+
+# Latest Articles 👇
