--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h1 id="posts">Posts</h1>
+        <div class="home"><p><img src="/through-tinted-lenses/images/ttl_small.png" alt="" title="Through Tinted Lenses" /></p>
+
+<p><strong>Welcome! My latest articles are below, if you’d like to get in touch, find me at <a href="www.twitter.com/harish3110">@harish3110</a> on Twitter</strong></p>
+
+<h1 id="latest-articles-">Latest Articles 👇</h1>
 
 
 
