--- a/_pages/search.html
+++ b/_pages/search.html
@@ -5,6 +5,8 @@ title: Search
 search_exclude: true
 ---
 
+![]({{site.baseurl}}/images/ttl_small.png "Through Tinted Lenses")
+
 <!-- adapted from https://github.com/pmarsceill/just-the-docs -->
 <script type="text/javascript" src="{{ '/assets/js/search.js' | relative_url }}"></script>
 <script type="text/javascript" src="{{ '/assets/js/vendor/lunr.min.js' | relative_url }}"></script>
