--- a/_pages/tags.html
+++ b/_pages/tags.html
@@ -5,6 +5,8 @@ title: Tags
 search_exclude: true
 ---
 
+![]({{site.baseurl}}/images/ttl_small.png "Through Tinted Lenses")
+
 {% if site.categories.size > 0 %}
 <h2>Contents</h2>
 
