--- a/search/index.html
+++ b/search/index.html
@@ -78,7 +78,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <!-- adapted from https://github.com/pmarsceill/just-the-docs -->
+        ![](/through-tinted-lenses/images/ttl_small.png "Through Tinted Lenses")
+
+<!-- adapted from https://github.com/pmarsceill/just-the-docs -->
 <script type="text/javascript" src="/through-tinted-lenses/assets/js/search.js"></script>
 <script type="text/javascript" src="/through-tinted-lenses/assets/js/vendor/lunr.min.js"></script>
 
