--- a/index.html
+++ b/index.html
@@ -80,11 +80,7 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><p><img src="/through-tinted-lenses/images/ttl.png" alt="" title="Through Tinted Lenses" /></p>
 
-<p><strong>Welcome! My latest articles are below, if you’d like to get in touch, find me at <a href="www.twitter.com/harish3110">@harish3110</a> on Twitter</strong></p>
-
-<p><img src="/through-tinted-lenses/images/ttl_small.png" alt="" title="TTL Logo" /></p>
-
-<hr />
+<h2 id="welcome-my-latest-articles-are-below-if-youd-like-to-get-in-touch-find-me-at-harish3110-on-twitter"><strong>Welcome! My latest articles are below, if you’d like to get in touch, find me at <a href="www.twitter.com/harish3110">@harish3110</a> on Twitter</strong></h2>
 <h1 id="latest-articles-">Latest Articles 👇</h1>
 
 
