deploy: 4b363edf563f8025662402413d402b44cb8efc4c

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><p><img src="/through-tinted-lenses/images/ttl3.png" alt="" title="Through Tinted Lenses" /></p>
 
-<h2 id="welcome-my-latest-articles-are-below-if-youd-like-to-get-in-touch-find-me-at-harish3110-on-twitter"><strong>Welcome! My latest articles are below, if you’d like to get in touch, find me at <a href="www.twitter.com/harish3110">@harish3110</a> on Twitter</strong></h2>
+<p><strong>Welcome! My latest articles are below, if you’d like to get in touch, find me at <a href="www.twitter.com/harish3110">@harish3110</a> on Twitter</strong></p>
+
+<hr />
 <h1 id="latest-articles-">Latest Articles 👇</h1>
 
 
