--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ search_exclude: true
 
 ![]({{site.baseurl}}/images/ttl3.png "Through Tinted Lenses")
 
-**Welcome! My latest articles are below, if you'd like to get in touch, find me at [@harish3110](www.twitter.com/harish3110) on Twitter**
+**Welcome! My latest articles are below, if you'd like to get in touch, find me [@harish3110](www.twitter.com/harish3110) on Twitter**
 
 ---
 # Latest Articles 👇
