deploy: 6a08b5bf31b3494a45ed4b0fe80cb027b94343d3

--- a/about/index.html
+++ b/about/index.html
@@ -104,6 +104,8 @@ window.onload = wrap_img;
 
 <p>FYI: Unfortunately, I haven’t passed the Turing test yet! ;)</p>
 
+<p><img src="/through-tinted-lenses/images/ttl_small.png" alt="" title="Through Tinted Lenses" /></p>
+
 <hr />
 
   </div>
