--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@ search_exclude: true
 **Welcome! My latest articles are below, if you'd like to get in touch, find me [@harish3110](www.twitter.com/harish3110) on Twitter**
 
 ---
-# Latest Articles 👇
+# Latest Articles:
