--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ window.onload = wrap_img;
 <p><strong>Welcome! My latest articles are below, if you’d like to get in touch, find me <a href="www.twitter.com/harish3110">@harish3110</a> on Twitter</strong></p>
 
 <hr />
-<h1 id="latest-articles-">Latest Articles 👇</h1>
+<h1 id="latest-articles">Latest Articles:</h1>
 
 
 
