--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://harish3110.github.io/through-tinted-lenses/" />
 <meta property="og:site_name" content="Through Tinted Lenses" />
 <script type="application/ld+json">
-{"description":"Immerse into the lesser known.","@type":"WebSite","headline":"Through Tinted Lenses","url":"https://harish3110.github.io/through-tinted-lenses/","name":"Through Tinted Lenses","@context":"https://schema.org"}</script>
+{"description":"Immerse into the lesser known.","@type":"WebSite","url":"https://harish3110.github.io/through-tinted-lenses/","name":"Through Tinted Lenses","headline":"Through Tinted Lenses","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/through-tinted-lenses/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://harish3110.github.io/through-tinted-lenses/feed.xml" title="Through Tinted Lenses" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -41,7 +41,7 @@
 <meta property="og:url" content="https://harish3110.github.io/through-tinted-lenses/" />
 <meta property="og:site_name" content="Through Tinted Lenses" />
 <script type="application/ld+json">
-{"description":"Immerse into the lesser known.","@type":"WebSite","headline":"Through Tinted Lenses","url":"https://harish3110.github.io/through-tinted-lenses/","name":"Through Tinted Lenses","@context":"https://schema.org"}</script>
+{"description":"Immerse into the lesser known.","@type":"WebSite","url":"https://harish3110.github.io/through-tinted-lenses/","name":"Through Tinted Lenses","headline":"Through Tinted Lenses","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
