deploy: f2a2ccf0495b184ccb2dfe6b7a527586f33e782c

--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://harish3110.github.io/through-tinted-lenses/about/" />
 <meta property="og:site_name" content="Through Tinted Lenses" />
 <script type="application/ld+json">
-{"description":"Immerse into the lesser known.","headline":"About Me","@type":"WebSite","url":"https://harish3110.github.io/through-tinted-lenses/about/","name":"Through Tinted Lenses","@context":"https://schema.org"}</script>
+{"description":"Immerse into the lesser known.","@type":"WebSite","headline":"About Me","url":"https://harish3110.github.io/through-tinted-lenses/about/","name":"Through Tinted Lenses","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/through-tinted-lenses/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://harish3110.github.io/through-tinted-lenses/feed.xml" title="Through Tinted Lenses" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -41,7 +41,7 @@
 <meta property="og:url" content="https://harish3110.github.io/through-tinted-lenses/about/" />
 <meta property="og:site_name" content="Through Tinted Lenses" />
 <script type="application/ld+json">
-{"description":"Immerse into the lesser known.","headline":"About Me","@type":"WebSite","url":"https://harish3110.github.io/through-tinted-lenses/about/","name":"Through Tinted Lenses","@context":"https://schema.org"}</script>
+{"description":"Immerse into the lesser known.","@type":"WebSite","headline":"About Me","url":"https://harish3110.github.io/through-tinted-lenses/about/","name":"Through Tinted Lenses","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
@@ -152,7 +152,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/harish3110" title="harish3110"><svg class="svg-icon grey"><use xlink:href="/through-tinted-lenses/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/harish3110" title="harish3110"><svg class="svg-icon grey"><use xlink:href="/through-tinted-lenses/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/harish3110" target="_blank" title="harish3110"><svg class="svg-icon grey"><use xlink:href="/through-tinted-lenses/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/harish3110" target="_blank" title="harish3110"><svg class="svg-icon grey"><use xlink:href="/through-tinted-lenses/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
 </div>
 
   </div>
