--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img src="/through-tinted-lenses/images/ttl3.png" alt="" title="Through Tinted Lenses" /></p>
+        <div class="home"><p><img src="/through-tinted-lenses/images/ttl3.png" alt="" title="Through Tinted Lenses" />
+<img src="/through-tinted-lenses/images/ttl_logo.png" alt="" title="Through Tinted Lenses" /></p>
 
 <p><strong>Welcome! My latest articles are below, if you’d like to get in touch, find me <a href="www.twitter.com/harish3110">@harish3110</a> on Twitter</strong></p>
 
