--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 search_exclude: true
 ---
 
-![]({{site.baseurl}}/images/ttl3.png "Through Tinted Lenses")
+<!-- ![]({{site.baseurl}}/images/ttl3.png "Through Tinted Lenses") -->
 ![]({{site.baseurl}}/images/ttl_logo.png "Through Tinted Lenses")
 
 **Welcome! My latest articles are below, if you'd like to get in touch, find me [@harish3110](www.twitter.com/harish3110) on Twitter**
